node.js express structure recipes are now drinks in the mixer control displays a list of all available drinks shows details of a drink
